fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -192,8 +192,7 @@ iframe {
     border: none;
     overflow: hidden;
     float: right;
-    margin-top: 0%;
-    margin-right: 10px;
+    margin-top: 0.5%;
 }
 
 .btn-add {
